# LM_studio_clone

./: .gitignore  Makefile  README.md  download_model.py  fix_model_selection.html  instructions  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py
app/models/: __init__.py  base.py  llama_cpp.py
app/routes/: __init__.py  admin.py  api.py  chat.py
app/services/: chat_store.py  database.py  gpu_monitor.py  logging.py  model_registry.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  chat.html
app/templates/components/: chat_list.html  folder_item.html  folder_list.html  sidebar.html
scripts/: bench.py
tests/: __init__.py  test_config.py
